# BitChaser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docs.yaml
data/snapshots/: btc_daily_2010-07-17_2026-07-16.parquet
docs/: index.md
docs/reference/: project-structure.md
docs/stylesheets/: extra.css
notebooks/: 01_data_exploration.ipynb
reports/latex/: preamble.tex  references.bib  report.tex
reports/latex/sections/: abstract.tex  background.tex  conclusion.tex  discussion.tex  introduction.tex  methods.tex  results.tex
scripts/: create_plots.py  create_snapshot.py  update_data.py
src/bitchaser/: config.py  main.py  utils.py
src/bitchaser/data/: cryptocompare.py  load.py  preprocess.py  update.py
tests/: test_package.py
tests/data/: test_preprocess.py
trees/: dep.txt  proj.txt
