[project]
name = "bitchaser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
    "jupyter>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mypy>=2.2.0",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "types-python-dateutil>=2.9.0.20260518",
    "types-requests>=2.33.0.20260518",
]
